# curve-fever

./: .gitignore  README.md  curve_web.js  curve_web.wasm  index.html  pyproject.toml
cpp/: CMakeLists.txt  curve_engine.hpp  curve_shaders.hpp  curve_webgpu_benchmark.cpp  curve_webgpu_demo.cpp  curve_webgpu_python.cpp  curve_webgpu_web.cpp
experiments/: train_atari_act_tinygrad.py  train_curve_rl_tinygrad.py  train_mnist_webgpu.py
scripts/: build_web.sh
src/curve_fever/: __init__.py  tinygrad_webgpu.py
web/: index.html
