[project]
name = "curve-fever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Janos Meny", email = "janos.meny@googlemail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.5",
    "tinygrad>=0.12.0",
    "torch>=2.12.0",
]

[project.scripts]
curve-fever = "curve_fever:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git" }
